# c-script-kiddie

./: .gitignore  Makefile  README.md
HTWK-WS2324/GdP/pruefung/: CMakeLists.txt  COMPILE.txt  ConsoleHelpers.h  IOManager.cpp  IOManager.hpp  InputManager.h  KeyMap.h  KeyMap.hpp  Menu.cpp  Menu.hpp  MenuBuilder.cpp  MenuBuilder.hpp  MenuHelper.h  Mitarbeiter.cpp  Mitarbeiter.hpp  Mitarbeiterdatenbank.cpp  Mitarbeiterdatenbank.hpp  OutputManager.h  TEST.txt  Utilities.cpp  Utilities.hpp  main.cpp
HTWK-WS2324/GdP/pruefung/Header/: Menu.hpp  Mitarbeiter.hpp  Mitarbeiterdatenbank.hpp  Utilities.hpp
HTWK-WS2324/GdP/pruefung/Implementation/: Menu.cpp  MenuBuilder.cpp  Mitarbeiter.cpp  Mitarbeiterdatenbank.cpp  Utilities.cpp
HTWK-WS2324/GdP/pruefung/src/: CMakeLists.txt  COMPILE.txt  ConsoleHelpers.h  Menu.h  MenuContent.h  Mitarbeiter.h  main.cpp
HTWK-WS2324/GdP/pruefung/src/Header/: ConsoleHelpers.h  ConsoleHelpers.hpp  IOManager.h  IOManager.hpp  KeyMap.h  KeyMap.hpp  Menu.h  Menu.hpp  Mitarbeiter.h  Mitarbeiter.hpp  Mitarbeiterdatenbank.h  Mitarbeiterdatenbank.hpp  Utilities.h  Utilities.hpp
HTWK-WS2324/GdP/pruefung/src/Implementation/: IOManager.cpp  Menu.cpp  Mitarbeiter.cpp  Mitarbeiterdatenbank.cpp  Utilities.cpp
digitaltechnik/V1/: KnightRider.cpp  binärZuDezimal.cpp  main.cpp  main.elf
digitaltechnik/V2/: DMX.ino  DmxCommand.h  DmxDevice.h  DmxSimple.cpp  DmxSimple.h  MiniMovingHead14Ch.h  MiniMovingHead14ChDemo.h  RgbwSpotlight8Ch.h  RgbwSpotlight8ChDemo.h  V2.ino  platformio.ini
gdp/pruefung/: CMakeLists.txt  KeyMap.h  Menu.h  MenuHelper.h  main.cpp  (+2 more)
(+206 files in other folders)
